# system-config

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .zuul-test  .zuul.yaml  README.md  README.rst  TEST_ZUUL_WEBHOOK.md  aaplications.yaml  bindep.txt  catalog-info.yaml  mempalace.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: .CODEOWNERS  CODEOWNERS  dependabot.yml
argocd-export/: argocd-cm.yaml  argocd-rbac-cm.yaml  argocd-secret.yaml  argocd-ssh-known-hosts-cm.yaml  argocd-tls-certs-cm.yaml
data/: account.builder  container.builder  object.builder
doc/: requirements.txt
docsportal/: README.md
opentelekomcloud_infra_config.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
otc-security/: README.md
playbooks/: acme-certs.yaml  acme_certs.yaml  base-ext.yaml  base.yaml  bootstrap-bridge.yaml  bootstrap-vault.yaml  cloud-cce.yaml  cloud-dns.yaml  cloud-hosts.yaml  cloud-identity.yaml  cloud-loadbalancer.yaml  cloud-networks.yaml  cloud-obs.yaml  cloud-rds.yaml  cloud-security-groups.yaml  cloud-vpcp.yaml  configure-keycloak.yaml  configure-nginx-acme-support.yaml  configure-vault-plugins.yaml  configure-vault.yaml  dashboards.yaml  dashboards_local.yaml  deploy-otc-security.yaml  deploy-threat-intelligence.yaml  distribute-swift-rings.yaml  enhanced-loadbalancers.yaml  enhanced-security-groups.yaml  fix-argocd-network-policies.yaml  grafana-datasources.yaml  install-ansible.yaml  install-helm-chart.yaml  install-kubernetes.yaml  manage-github.yaml  monitor_haproxy.yaml  monitor_promtail.yaml  monitor_telegraf.yaml  propose-update.yaml  (+51 more)
(+2619 files in other folders)
