[metadata]
name = opentelekomcloud-infra-config
summary = Open Telekom Cloud Ecosystem Infrastructure Config
description_file =
    README.rst
author = Ecosystem Contributors
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
#build-dir = doc/build
#source-dir = doc/source
warning-is-error = 1
